k8s/domains/capabilities/infra/worker/base/capabilities-worker-depl.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: capabilities-worker-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: capabilities-worker
  template:
    metadata:
      labels:
        app: capabilities-worker
    spec:
      terminationGracePeriodSeconds: 15
      automountServiceAccountToken: false

      containers:
        - name: capabilities-worker
          image: mdstaicu/capabilities-worker
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: health
              containerPort: 3000

          readinessProbe:
            httpGet:
              path: /readyz
              port: health
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 2

          livenessProbe:
            httpGet:
              path: /livez
              port: health
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 2
