k8s/domains/capabilities/infra/worker/base/capabilities-worker-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny-capabilities-worker
spec:
  podSelector:
    matchLabels:
      app: capabilities-worker
  policyTypes:
    - Ingress
    - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-capabilities-worker-dns
spec:
  podSelector:
    matchLabels:
      app: capabilities-worker
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-capabilities-worker-to-postgres
spec:
  podSelector:
    matchLabels:
      app: capabilities-worker
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: capabilities-postgres
      ports:
        - protocol: TCP
          port: 5432

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-capabilities-worker-to-nats
spec:
  podSelector:
    matchLabels:
      app: capabilities-worker
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nats
          podSelector:
            matchLabels:
              app: nats
      ports:
        - protocol: TCP
          port: 4222
